--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
+/* replace with your own fonts if need be */
+@import url("https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Source+Code+Pro");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  font-family: "Source Code Pro", monospace;
+  font-size: 16px;
+  height: 100%;
+  margin: 0;
+  width: 100%;
+  scroll-behavior: smooth;
+}
+
+/* Custom HTML & CSS Logo */
+#custom-logo {
+  font-family: "Reenie Beanie", cursive;
+}
+
+/* Mobile Behavior */
+html {
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* Dark Mode */
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: rgb(15, 23, 42);
+  }
+}
